export const STRINGS = {
  ERROR: {
    downloadWeatherData: 'Error downloading weather data:',
    dataDownloadError: 'Weather data download error',
    downloadWeatherDataCoords: 'Error downloading weather data (coords):',
    dataDownloadErrorWithLocation:
      'Error downloading weather data with location',
    failedLoadCities: 'Failed to load cities.',
    noResults: 'No cities.',
  },
  LABELS: {
    weather: 'Weather',
    details: 'Details',
    humidity: 'Humidity',
    pressure: 'Pressure',
    windSpeed: 'Wind Speed',
    cloudCover: 'Cloud Cover',
    searchBarPlaceholder: 'Search for a city...',
  },
  UNITS: {
    temperature: '°C',
    percentage: '%',
    pressure: 'hPa',
    windSpeed: 'mph',
  },
};
