# maestro/city-list-to-details.yaml
appId: com.weatherapp

---
- launchApp
- assertVisible: 'city-item'
- tapOn: 'city-item'
- assertVisible: 'Humidity'
- assertVisible: 'Pressure'
- assertVisible: 'Wind Speed'
